test/sql/select/test_select_locking.test
# name: test/sql/select/test_select_locking.test
# description: Select locking
# group: [select]

statement ok
CREATE TABLE t (t TEXT);

# unsupported
statement error
SELECT * FROM t FOR UPDATE;
----
Parser Error: SELECT locking clause is not supported!

# unsupported
statement error
SELECT * FROM t FOR NO KEY UPDATE;
----
Parser Error: SELECT locking clause is not supported!

# unsupported
statement error
SELECT * FROM t FOR SHARE;
----
Parser Error: SELECT locking clause is not supported!

# unsupported
statement error
SELECT * FROM t KEY SHARE;
----
Parser Error: syntax error at or near "SHARE"
LINE 1: SELECT * FROM t KEY SHARE;
                            ^
